--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/resin-os/resinos-tests.git"
+    "url": "git+https://github.com/resin-io/resinos-tests.git"
   },
   "keywords": [
     "resinOS",
@@ -17,12 +17,12 @@
     "resin.io",
     "resin"
   ],
-  "author": "Theodor Gherzan",
+  "author": "Resin Inc. <hello@etcher.io>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/resin-os/resinos-tests/issues"
+    "url": "https://github.com/resin-io/resinos-tests/issues"
   },
-  "homepage": "https://github.com/resin-os/resinos-tests#readme",
+  "homepage": "https://github.com/resin-io/resinos-tests",
   "dependencies": {
     "bluebird": "^3.5.0",
     "chai": "^4.0.2",
