--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mountutils": "^1.2.0",
     "nodegit": "^0.18.3",
     "progress-stream": "^2.0.0",
+    "resin-image-fs": "^4.0.2",
     "resin-sdk": "^7.0.0"
   },
   "devDependencies": {
