--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,11 @@ jobs:
     working_directory: ~/repo
 
     steps:
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt-get update && sudo apt-get install -y qemu-system-x86 qemu-kvm
+
       - checkout
 
       # Download and cache dependencies
@@ -17,7 +22,7 @@ jobs:
           - v1-dependencies-
 
       - run:
-            name: Installing dependencies
+            name: Installing node dependencies
             command: npm install
 
       - save_cache:
