--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "eslint lib",
     "test": "npm run lint",
-    "start": "mocha lib/main.js --ui bdd --timeout 900000"
+    "start": "ava"
   },
   "repository": {
     "type": "git",
@@ -23,14 +23,19 @@
     "url": "https://github.com/resin-io/resinos-tests/issues"
   },
   "homepage": "https://github.com/resin-io/resinos-tests",
+  "ava": {
+    "files": [
+      "lib/main.js"
+    ],
+    "failFast": true,
+    "failWithoutAssertions": true
+  },
   "dependencies": {
+    "ava": "^0.23.0",
     "bluebird": "^3.5.0",
-    "chai": "^4.0.2",
-    "chai-as-promised": "^7.0.0",
     "drivelist": "^5.0.22",
     "etcher-image-write": "^9.1.3",
     "fs-extra": "^3.0.1",
-    "mocha": "^3.4.2",
     "mountutils": "^1.2.0",
     "nodegit": "^0.18.3",
     "progress-stream": "^2.0.0",
