Use credentials instead of session token to authenticate
Signed-off-by: Horia Delicoti <horia.delicoti@gmail.com>

--- a/env.list.example
+++ b/env.list.example
@@ -1,4 +1,5 @@
 APPLICATION_NAME=MochaTest
-WIFI_SSID=<replace with your router SSID>
-WIFI_KEY=<replace with your router password>
-AUTH_TOKEN=<replace with authentication token>
+EMAIL=<replace with account email>
+PASSWORD=<replace with account password>
+WIFI_SSID=<replace with router SSID>
+WIFI_KEY=<replace with router password>
