--- a/env.list.example
+++ b/env.list.example
@@ -1,5 +1,6 @@
-APPLICATION_NAME=MochaTest
-EMAIL=<replace with account email>
-PASSWORD=<replace with account password>
-WIFI_SSID=<replace with router SSID>
-WIFI_KEY=<replace with router password>
+RESINOS_TESTS_APPLICATION_NAME=<replace with application name>
+RESINOS_TESTS_EMAIL=<replace with account email>
+RESINOS_TESTS_PASSWORD=<replace with account password>
+RESINOS_TESTS_WIFI_SSID=<replace with router SSID>
+RESINOS_TESTS_WIFI_KEY=<replace with router password>
+RESINOS_TESTS_DISK=<replace with disk device>
