--- a/env.list.example
+++ b/env.list.example
@@ -1,6 +1,8 @@
+RESINOS_TESTS_DEVICE_TYPE=<replace with device type to test>
 RESINOS_TESTS_APPLICATION_NAME=<replace with application name>
+RESINOS_TESTS_RESINOS_VERSION=<replace with verison to test>
 RESINOS_TESTS_EMAIL=<replace with account email>
 RESINOS_TESTS_PASSWORD=<replace with account password>
+RESINOS_TESTS_DISK=<replace with disk device>
 RESINOS_TESTS_WIFI_SSID=<replace with router SSID>
 RESINOS_TESTS_WIFI_KEY=<replace with router password>
-RESINOS_TESTS_DISK=<replace with disk device>
