Add a basic README
Change-Type: patch
Signed-off-by: Juan Cruz Viotti <jv@jviotti.com>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Automated testing for ResinOS",
   "scripts": {
     "tslint": "tslint -t stylish \"lib/**/*.ts\"",
-    "test": "npm run tslint",
+    "lint": "npm run tslint",
+    "test": "npm run lint",
     "start": "ava-ts"
   },
   "repository": {
