--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "etcher-image-write": "^9.1.3",
     "fs-extra": "^3.0.1",
     "mountutils": "^1.2.0",
-    "nodegit": "^0.18.3",
     "progress-stream": "^2.0.0",
     "resin-cli-visuals": "^1.4.0",
     "resin-image-fs": "^4.0.2",
     "resin-sdk": "^7.0.0",
+    "simple-git": "^1.85.0",
+    "ssh-keygen": "^0.4.1",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.1"
   },
