Run all tests serially
Lets do it for all tests for now, given it makes it way easier to
implement semi-automated test cases.

We can look at parallelising some for speed purposes later on.

Change-Type: patch
Signed-off-by: Juan Cruz Viotti <jv@jviotti.com>

--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
       "lib/main.ts"
     ],
     "failFast": true,
-    "failWithoutAssertions": true
+    "failWithoutAssertions": true,
+    "serial": true,
+    "concurrency": 1,
+    "verbose": true
   },
   "dependencies": {
     "ava": "^0.23.0",
