--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "drivelist": "^5.0.22",
     "etcher-image-write": "^9.1.3",
     "fs-extra": "^3.0.1",
+    "inquirer": "^5.1.0",
     "mountutils": "^1.2.0",
+    "node-ipc": "^9.1.1",
     "progress-stream": "^2.0.0",
     "resin-cli-visuals": "^1.4.0",
     "resin-image-fs": "^4.0.2",
