Execute Ava CLI through a Node.js wrapper
This will make is easier to intercept Ava's stdin for semi-automation
test writing purposes.

The `lib/runner.js` file is not a TypeScript file since running the
entry point with `ts-node` yields some incomprehensible null-related
issues with completely out of sense line numbers.

Change-Type: patch
Signed-off-by: Juan Cruz Viotti <jv@jviotti.com>

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "tslint": "tslint -t stylish \"lib/**/*.ts\"",
     "lint": "npm run tslint",
     "test": "npm run lint",
-    "start": "ava-ts"
+    "start": "node lib/runner.js"
   },
   "repository": {
     "type": "git",
