--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
 
     steps:
       - checkout
+      - run:
+          name: Clone submodules
+          command: git submodule update --init --recursive
 
       - run:
           name: Build docker image
