Move the project back to javascript
The only reason this project wsa using typescript was for the async / await support,
but this is supported since noce v8.9. We will just use that from now on and move
back to javascript.

Change-type: patch
Signed-off-by: Theodor Gherzan <theodor@resin.io>

--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,6 @@ build/Release
 node_modules/
 jspm_packages/
 
-# Typescript v1 declaration files
-typings/
-
 # Optional npm cache directory
 .npm
 
@@ -60,8 +57,9 @@ typings/
 # dotenv environment variables file
 .env
 
+# Swap files
+*.sw*
+
 # End of https://www.gitignore.io/api/node
 
-env.list
 .tmp
-ts-node-*
