--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automated testing for ResinOS",
   "scripts": {
     "tslint": "tslint -t stylish \"lib/**/*.ts\"",
-    "lint": "npm run tslint",
+    "lint": "eslint lib && npm run tslint",
     "test": "npm run lint",
     "start": "node lib/runner.js"
   },
@@ -55,6 +55,14 @@
     "typescript": "^2.6.1"
   },
   "devDependencies": {
+    "eslint": "^4.18.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsdoc": "^3.5.0",
+    "eslint-plugin-lodash": "^2.6.1",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "tslint": "^5.8.0"
   }
 }
