Do not share application name between tests, so we can run test instances in parallel
Change-type: patch
Signed-off-by: Theodor Gherzan <theodor@resin.io>

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mountutils": "^1.2.0",
     "node-ipc": "^9.1.1",
     "progress-stream": "^2.0.0",
+    "randomstring": "^1.1.5",
     "resin-cli-visuals": "^1.4.0",
     "resin-image-fs": "^4.0.2",
     "resin-sdk": "^8.1.0",
