--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.2",
   "description": "Automated testing for ResinOS",
   "scripts": {
-    "lint": "eslint lib",
+    "lint": "eslint lib scripts",
     "test": "npm run lint",
     "start": "node lib/runner.js"
   },
@@ -40,6 +40,7 @@
     "etcher-image-write": "^9.1.3",
     "fs-extra": "^3.0.1",
     "inquirer": "^5.1.0",
+    "make-runnable": "^1.3.6",
     "mountutils": "^1.2.0",
     "node-ipc": "^9.1.1",
     "progress-stream": "^2.0.0",
