--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "ava": "^0.23.0",
     "bluebird": "^3.5.0",
+    "bluebird-retry": "^0.11.0",
     "byline": "^5.0.0",
     "drivelist": "^5.0.22",
     "etcher-image-write": "^9.1.3",
