--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
     ],
     "failWithoutAssertions": true,
     "serial": true,
-    "concurrency": 1,
-    "verbose": true
+    "tap": true
   },
   "dependencies": {
-    "ava": "^0.23.0",
+    "ava": "^1.0.0-beta.4",
     "bluebird": "^3.5.0",
     "bluebird-retry": "^0.11.0",
     "byline": "^5.0.0",
     "drivelist": "^5.0.22",
     "etcher-image-write": "^9.1.3",
     "fs-extra": "^3.0.1",
+    "indent-string": "^3.2.0",
     "inquirer": "^5.1.0",
     "make-runnable": "^1.3.6",
     "mountutils": "^1.2.0",
@@ -51,7 +51,9 @@
     "resin-sdk": "^9.0.0-beta10",
     "semver": "^5.5.0",
     "simple-git": "^1.85.0",
-    "ssh-keygen": "^0.4.1"
+    "ssh-keygen": "^0.4.1",
+    "symbols": "0.0.6",
+    "tap-parser": "^7.0.0"
   },
   "devDependencies": {
     "eslint": "^4.18.1",
