--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "fs-extra": "^3.0.1",
     "indent-string": "^3.2.0",
     "inquirer": "^5.1.0",
+    "lodash": "^4.17.10",
     "make-runnable": "^1.3.6",
     "mountutils": "^1.2.0",
     "node-ipc": "^9.1.1",
