--- a/results.yaml
+++ b/results.yaml
@@ -1,4 +1,50 @@
 results:
+  -
+    provision_time: 6m 16.45999999999998s
+    image_size: 1724 Mb
+    body: |-
+      $ Tests
+
+
+      # Summary
+      - planned: 12
+      - pass: 9
+      - fail: 3
+
+      # Fails
+      ## experience: Sync application container
+          ✖ experience: Sync application container
+          {
+              "name": "AssertionError",
+              "assertion": "true",
+              "values": {
+                  "Value is not `true`:": "false"
+              },
+              "at": "Object.exports.runManualTestCase (lib/utils.js:137:12)"
+          }
+      ## supervisor: Reboot while application is running
+          ✖ supervisor: Reboot while application is running
+          {
+              "name": "AssertionError",
+              "assertion": "true",
+              "values": {
+                  "Value is not `true`:": "false"
+              },
+              "at": "Object.exports.runManualTestCase (lib/utils.js:137:12)"
+          }
+      ## supervisor: Test multicontainer application on a running device
+          ✖ supervisor: Test multicontainer application on a running device
+          {
+              "name": "AssertionError",
+              "assertion": "true",
+              "values": {
+                  "Value is not `true`:": "false"
+              },
+              "at": "Object.exports.runManualTestCase (lib/utils.js:137:12)"
+          }
+    author: theodor.gherzan@gmail.com
+    timestamp: 2018-5-8
+    PS_UUID: 37061940-52cd-11e8-a229-473191b90108
   - provision_time: 2m 48.349999999999994s
     image_size: 1807.745024 Mb
     body: "# Tests\n\n- ✔ Device is online [pass: 1, fail: 0, duration: 0ms]\n- ✔ Device reported hostOS version [pass: 1, fail: 0, duration: 0ms]\n- ✔ Device has started application [pass: 1, fail: 0, duration: 0ms]\n- ✔ resin host OS update [2.12.5+rev1.prod -> 2.12.5+rev1.prod] [pass: 1, fail: 0, duration: 0ms]\n- ✖ experience: Enter running application container [pass: 0, fail: 1, duration: 0ms]\n- ✔ experience: Sync application container [pass: 1, fail: 0, duration: 0ms]\n- ✖ graphics: Kernel boot logo [pass: 0, fail: 1, duration: 0ms]\n- ✔ graphics: Reboot splash screen [pass: 1, fail: 0, duration: 0ms]\n- ✖ graphics: Boot/Shutdown splash screen [pass: 0, fail: 1, duration: 0ms]\n- ✔ supervisor: Identification LED [pass: 1, fail: 0, duration: 0ms]\n- ✖ supervisor: Set environment variable when application is running [pass: 0, fail: 1, duration: 0ms]\n- ✔ supervisor: Reboot while application is running [pass: 1, fail: 0, duration: 0ms]\n- ✖ supervisor: Reload supervisor on a running device [pass: 0, fail: 1, duration: 0ms]\n- ✔ resinhup: update device status with resin-device-progress [pass: 1, fail: 0, duration: 2ms]\n\n# Summary\n- planned: 14\n- assertions: 14\n- pass: 9\n- fail: 5\n\n# Fails\n## experience: Enter running application container\n    ✖ experience: Enter running application container\n    name: AssertionError\n    assertion: 'true'\n    values:\n      'Value is not `true`:': 'false'\n    at: 'Object.exports.runManualTestCase (lib/utils.js:143:12)'\n\n## graphics: Kernel boot logo\n    ✖ graphics: Kernel boot logo\n    name: AssertionError\n    assertion: 'true'\n    values:\n      'Value is not `true`:': 'false'\n    at: 'Object.exports.runManualTestCase (lib/utils.js:143:12)'\n\n## graphics: Boot/Shutdown splash screen\n    ✖ graphics: Boot/Shutdown splash screen\n    name: AssertionError\n    assertion: 'true'\n    values:\n      'Value is not `true`:': 'false'\n    at: 'Object.exports.runManualTestCase (lib/utils.js:143:12)'\n\n## supervisor: Set environment variable when application is running\n    ✖ supervisor: Set environment variable when application is running\n    name: AssertionError\n    assertion: 'true'\n    values:\n      'Value is not `true`:': 'false'\n    at: 'Object.exports.runManualTestCase (lib/utils.js:143:12)'\n\n## supervisor: Reload supervisor on a running device\n    ✖ supervisor: Reload supervisor on a running device\n    name: AssertionError\n    assertion: 'true'\n    values:\n      'Value is not `true`:': 'false'\n    at: 'Object.exports.runManualTestCase (lib/utils.js:143:12)'\n\n# Comments\n## resin host OS update [2.12.5+rev1.prod -> 2.12.5+rev1.prod]\n? Did the test pass? (y/N) \e[27D\e[27C\e[2K\e[G? Did the test pass? (y/N) N\e[28D\e[28C\e[2K\e[G? Did the test pass? No\e[23D\e[23C\n\n## experience: Enter running application container\n? Did the test pass? (y/N) \e[27D\e[27C\e[2K\e[G? Did the test pass? (y/N) y\e[28D\e[28C\e[2K\e[G? Did the test pass? Yes\e[24D\e[24C\n\n## experience: Sync application container\n? Did the test pass? (y/N) \e[27D\e[27C\e[2K\e[G? Did the test pass? (y/N) n\e[28D\e[28C\e[2K\e[G? Did the test pass? No\e[23D\e[23C\n\n## graphics: Kernel boot logo\n? Did the test pass? (y/N) \e[27D\e[27C\e[2K\e[G? Did the test pass? (y/N) y\e[28D\e[28C\e[2K\e[G? Did the test pass? Yes\e[24D\e[24C\n\n## graphics: Reboot splash screen\n? Did the test pass? (y/N) \e[27D\e[27C\e[2K\e[G? Did the test pass? (y/N) n\e[28D\e[28C\e[2K\e[G? Did the test pass? No\e[23D\e[23C\n\n## graphics: Boot/Shutdown splash screen\n? Did the test pass? (y/N) \e[27D\e[27C\e[2K\e[G? Did the test pass? (y/N) y\e[28D\e[28C\e[2K\e[G? Did the test pass? Yes\e[24D\e[24C\n\n## supervisor: Identification LED\n? Did the test pass? (y/N) \e[27D\e[27C\e[2K\e[G? Did the test pass? (y/N) n\e[28D\e[28C\e[2K\e[G? Did the test pass? No\e[23D\e[23C\n\n## supervisor: Set environment variable when application is running\n? Did the test pass? (y/N) \e[27D\e[27C\e[2K\e[G? Did the test pass? (y/N) y\e[28D\e[28C\e[2K\e[G? Did the test pass? Yes\e[24D\e[24C\n\n## supervisor: Reboot while application is running\n? Did the test pass? (y/N) \e[27D\e[27C\e[2K\e[G? Did the test pass? (y/N) n\e[28D\e[28C\e[2K\e[G? Did the test pass? No\e[23D\e[23C\n\n## supervisor: Reload supervisor on a running device\n? Did the test pass? (y/N) \e[27D\e[27C\e[2K\e[G? Did the test pass? (y/N) y\e[28D\e[28C\e[2K\e[G? Did the test pass? Yes\e[24D\e[24C"
