--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,26 @@
 results:
   -
-    provision_time: 2m 52.22999999999999s
+    provision_time: 5m 5.740000000000009s
+    image_size: 1724 Mb
+    body: |-
+      $ Tests
+       - ✔ Device reported hostOS version
+       - ✔ Checking filename format of the image
+       - ✔ Device is online
+       - ✔ Device has started application
+       - ✔ Resin host OS update [2.12.7+rev1.prod -> 2.12.7+rev1.prod]
+
+
+      # Summary
+      - planned: 5
+      - pass: 5
+      - fail: 0
+
+      # Fails
+    author: testbot+resinos@resin.io
+    timestamp: 2018-5-9
+    PS_UUID: 5ee7e3f0-5398-11e8-a7eb-239c47589c3d
+  - provision_time: 2m 52.22999999999999s
     image_size: 1724 Mb
     body: |-
       $ Tests
