--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,26 @@
 results:
   -
-    provision_time: 4m 38.48000000000002s
+    provision_time: 3m 45.46000000000001s
+    image_size: 1724 Mb
+    body: |-
+      $ Tests
+       - ✔ Device reported hostOS version
+       - ✔ Checking filename format of the image
+       - ✔ Device is online
+       - ✔ Device has started application
+       - ✔ Resin host OS update [2.12.7+rev1.prod -> 2.12.7+rev1.prod]
+
+
+      # Summary
+      - planned: 5
+      - pass: 5
+      - fail: 0
+
+      # Fails
+    author: testbot+resinos@resin.io
+    timestamp: 2018-5-12
+    PS_UUID: 5a48a3d0-55bd-11e8-b4cf-d3da94a60d56
+  - provision_time: 4m 38.48000000000002s
     image_size: 1724 Mb
     body: |-
       $ Tests
