--- a/results.yaml
+++ b/results.yaml
@@ -1,5 +1,25 @@
 results:
   - device_type: qemux86-64
+    provision_time: 3m 14s
+    image_size: 1724 Mb
+    resin_os_version: 2.12.7+rev1.prod
+    body: |-
+      # Tests
+       - ✔ Device reported hostOS version
+       - ✔ Checking filename format of the image
+       - ✔ Device is online
+       - ✔ Device has started application
+       - ✔ Resin host OS update [2.12.7+rev1.prod -> 2.12.7+rev1.prod]
+
+
+      # Summary
+      - planned: 5
+      - pass: 5
+      - fail: 0
+    author: testbot+resinos@resin.io
+    timestamp: 2018-5-15
+    PS_UUID: 93318ae0-5847-11e8-bfa6-8bd1a0d12fcb
+  - device_type: qemux86-64
     provision_time: 3m 15s
     image_size: 1724 Mb
     resin_os_version: 2.12.7+rev1.prod
