Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -1,4 +1,39 @@
 results:
+  -
+    body: |-
+      $ Tests - ✔ Device reported hostOS version
+       - ✖ before hook
+       - ✖ after.always hook
+
+
+      # Summary
+      - planned: 3
+      - pass: 1
+      - fail: 2
+
+      # Fails
+      ## before hook
+          ✖ before hook
+          {
+              "name": "AssertionError",
+              "message": "Rejected promise returned by test",
+              "values": {
+                  "Rejected promise returned by test. Reason:": "TypeError {\n  message: 'Cannot read property \\'toString\\' of undefined',\n}"
+              },
+              "at": "LocalStorage.setItem (node_modules/node-localstorage/LocalStorage.js:176:27)"
+          }
+      ## after.always hook
+          ✖ after.always hook
+          {
+              "name": "AssertionError",
+              "message": "Rejected promise returned by test",
+              "values": {
+                  "Rejected promise returned by test. Reason:": "ResinNotLoggedIn {\n  message: 'You have to log in',\n  name: 'ResinNotLoggedIn',\n}"
+              },
+              "at": "node_modules/resin-sdk/build/auth.js:49:15"
+          }
+    timestamp: 2018-5-29
+    PS_UUID: 4c073640-6398-11e8-9e7a-fb5b69cb2c8d
   - device_type: qemux86-64
     provision_time: 3m 34s
     image_size: 1724 Mb
