--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,84 @@
 results:
   -
+    provision_time: 4m 22s
+    image_size: 1724 Mb
+    resin_os_version: 2.12.7+rev1.prod
     body: |-
+      # Tests 
+       - ✔ Device reported hostOS version
+       - ✔ Device has started application
+       - ✔ Resin host OS update [2.12.7+rev1.prod -> 2.12.7+rev1.prod]
+       - ✔ Checking filename format of the image
+       - ✔ Device is online
+       - ✔ experience: Enter running application container
+       - ✖ experience: Sync application container
+       - ✔ supervisor: Set device service variable when application is running
+       - ✖ supervisor: Reboot while application is running
+       - ✖ supervisor: Reload supervisor on a running device
+       - ✖ supervisor: Test multicontainer application on a running device
+       - ✖ resinhup: Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 12
+      - pass: 7
+      - fail: 5
+
+      # Fails
+      ## experience: Sync application container
+          ✖ experience: Sync application container
+          {
+              "name": "AssertionError",
+              "assertion": "true",
+              "values": {
+                  "Value is not `true`:": "false"
+              },
+              "at": "Object.exports.runManualTestCase (lib/utils.js:137:12)"
+          }
+      ## supervisor: Reboot while application is running
+          ✖ supervisor: Reboot while application is running
+          {
+              "name": "AssertionError",
+              "assertion": "true",
+              "values": {
+                  "Value is not `true`:": "false"
+              },
+              "at": "Object.exports.runManualTestCase (lib/utils.js:137:12)"
+          }
+      ## supervisor: Reload supervisor on a running device
+          ✖ supervisor: Reload supervisor on a running device
+          {
+              "name": "AssertionError",
+              "assertion": "true",
+              "values": {
+                  "Value is not `true`:": "false"
+              },
+              "at": "Object.exports.runManualTestCase (lib/utils.js:137:12)"
+          }
+      ## supervisor: Test multicontainer application on a running device
+          ✖ supervisor: Test multicontainer application on a running device
+          {
+              "name": "AssertionError",
+              "assertion": "true",
+              "values": {
+                  "Value is not `true`:": "false"
+              },
+              "at": "Object.exports.runManualTestCase (lib/utils.js:137:12)"
+          }
+      ## resinhup: Update device status with resin-device-progress
+          ✖ resinhup: Update device status with resin-device-progress
+          {
+              "name": "AssertionError",
+              "assertion": "true",
+              "values": {
+                  "Value is not `true`:": "false"
+              },
+              "at": "Object.exports.runManualTestCase (lib/utils.js:137:12)"
+          }
+    author: null
+    timestamp: 2018-5-30
+    PS_UUID: d2755e90-639e-11e8-9a1c-950409327b4c
+  - body: |-
       # Tests 
        - ✔ Device reported hostOS version
        - ✖ before hook
