--- a/results.yaml
+++ b/results.yaml
@@ -20,6 +20,32 @@ results:
               "name": "AssertionError",
               "message": "Rejected promise returned by test",
               "values": {
+                  "Rejected promise returned by test. Reason:": "`BusyBox v1.24.1 (2018-05-04 12:37:24 UTC) multi-call binary.␊\n␊\nUsage: ip [OPTIONS] {address | route | link | tunnel | } {COMMAND}␊\n`"
+              }
+          }
+    author: null
+    timestamp: 2018-5-31
+    PS_UUID: 305aebc0-64c5-11e8-8fe2-cf411ba07f89
+  - provision_time: null
+    image_size: null
+    resin_os_version: 2.12.7+rev1.prod
+    body: |-
+      # Tests 
+       - ✖ Cellular modem connection
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Cellular modem connection
+          ✖ Cellular modem connection
+          {
+              "name": "AssertionError",
+              "message": "Rejected promise returned by test",
+              "values": {
                   "Rejected promise returned by test. Reason:": "`Warning: Identity file undefined not accessible: No such file or directory.␊\n`"
               }
           }
