--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,32 @@
 results:
   -
+    provision_time: null
+    image_size: null
+    resin_os_version: 2.12.7+rev1.prod
     body: |-
+      # Tests 
+       - ✖ Cellular modem connection
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Cellular modem connection
+          ✖ Cellular modem connection
+          {
+              "name": "AssertionError",
+              "message": "Rejected promise returned by test",
+              "values": {
+                  "Rejected promise returned by test. Reason:": "`grep: 10.250.134.249/30: No such file or directory␊\n`"
+              }
+          }
+    author: null
+    timestamp: 2018-5-31
+    PS_UUID: d41bd990-64c5-11e8-9614-71191f99add5
+  - body: |-
       # Tests 
        - ✖ Cellular modem connection
 
