--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,32 @@
 results:
   -
+    provision_time: null
+    image_size: null
+    resin_os_version: 2.12.7+rev1.prod
     body: |-
+      # Tests 
+       - ✖ Cellular modem connection
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Cellular modem connection
+          ✖ Cellular modem connection
+          {
+              "name": "AssertionError",
+              "message": "Rejected promise returned by test",
+              "values": {
+                  "Rejected promise returned by test. Reason:": "`awk: cmd. line:1: Unexpected token␊\nls: cannot access '/sys/class/usbmisc//device/net/': No such file or directory␊\n`"
+              }
+          }
+    author: null
+    timestamp: 2018-5-31
+    PS_UUID: eb808210-64c6-11e8-b0ed-9704d7454acf
+  - body: |-
       # Tests 
        - ✖ /usr/app/lib/main.js: Unexpected token, expected "," (234:98)
 
