--- a/results.yaml
+++ b/results.yaml
@@ -20,6 +20,33 @@ results:
               "name": "AssertionError",
               "message": "Rejected promise returned by test",
               "values": {
+                  "Rejected promise returned by test. Reason:": "ReferenceError {\n  message: 'iface is not defined',\n}"
+              },
+              "at": "Test.ava.test.only [as fn] (lib/main.js:238:73)"
+          }
+    author: null
+    timestamp: 2018-5-31
+    PS_UUID: 1d54b400-64c7-11e8-b082-adfcfec70c92
+  - provision_time: null
+    image_size: null
+    resin_os_version: 2.12.7+rev1.prod
+    body: |-
+      # Tests 
+       - ✖ Cellular modem connection
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Cellular modem connection
+          ✖ Cellular modem connection
+          {
+              "name": "AssertionError",
+              "message": "Rejected promise returned by test",
+              "values": {
                   "Rejected promise returned by test. Reason:": "`awk: cmd. line:1: Unexpected token␊\nls: cannot access '/sys/class/usbmisc//device/net/': No such file or directory␊\n`"
               }
           }
