--- a/results.yaml
+++ b/results.yaml
@@ -26,6 +26,33 @@ results:
           }
     author: null
     timestamp: 2018-5-31
+    PS_UUID: c0c1dc80-64c7-11e8-b157-65a6f4f6a382
+  - provision_time: null
+    image_size: null
+    resin_os_version: 2.12.7+rev1.prod
+    body: |-
+      # Tests 
+       - ✖ Cellular modem connection
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Cellular modem connection
+          ✖ Cellular modem connection
+          {
+              "name": "AssertionError",
+              "assertion": "is",
+              "values": {
+                  "Difference:": "- []\n+ '200'"
+              },
+              "at": "Test.ava.test.only [as fn] (lib/main.js:242:8)"
+          }
+    author: null
+    timestamp: 2018-5-31
     PS_UUID: 8891b4c0-64c7-11e8-a868-439cf53fde03
   - body: |-
       # Tests 
